--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "lint": "npx eslint . --fix",
     "start": "npx ts-node src/main.ts",
     "dev": "tsc && ts-node-dev --respawn --transpile-only ./src/main.ts",
-    "prod": "tsc && node ./dist/app.js"
+    "prod": "tsc && node ./dist/app.js",
+    "test" : "jest"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "@tsconfig/node18": "^1.0.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
@@ -30,9 +32,11 @@
     "agenda": "^5.0.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.27.0",
+    "jest": "^29.7.0",
     "joi": "^17.12.0",
     "prettier": "^2.7.1",
     "prisma": "^5.8.1",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tslint": "^6.1.3",
