--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "start": "npx ts-node src/main.ts",
     "dev": "tsc && ts-node-dev --respawn --transpile-only ./src/main.ts",
     "prod": "tsc && node ./dist/app.js",
-    "test" : "jest"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -53,6 +53,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8",
     "uuid": "^9.0.1",
     "winston": "^3.8.2"
